--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -66,6 +66,7 @@ bg:
   successful sign-out: "Отписване!"
   invalid login: "Невалиден потребител или парола"
   invalid password: "Неправилна парола"
+  sign back in: "Заради вашата сигурност, регистрацията е невалидна след две седцмици. Запишете се отново."
   youversion: "YouVersion"
   username or email prompt: "Потребителско име (или ел.поща)"
   password prompt: "Парола"
@@ -155,6 +156,7 @@ bg:
     see my likes: "Виж всички харесвания"
     successfully deleted: "Премахнати бележки"
   ref:
+    loading secondary: "Зареждане във вторичната версия"
     clear verses: "Изчисти избраните стихове"
     choose book and chapter: "Избери книга и глава"
     choose version: "Избери версия"
@@ -176,6 +178,8 @@ bg:
     select another chapter: "Избери различна глава"
     view in reader: "Виж %{reference} в четеца"
   users:
+    unverified heading: "Почти сме готови!"
+    unverified message: "Опитвате да влезете в профил който не е напълно регистриран. Потвърдете ел.поща като кликнете на изправената ви връзка от YouVersion. Ако не можете да я откриете ще я <a href='%{resend_path}'>изпратим отново</a>."
     reset connection: "Грешка. Свържи връзката отново."
     settings: "Настройки"
     no connection friends: "Никой от твоите %{connection} приятели не е на YouVersion."
@@ -194,6 +198,7 @@ bg:
     follow: "Следвай"
     follow user: "Следвай %{user}"
     unfollow: "Спри да следваш"
+    unfollow user: "Спри да следваш %{user}"
     following title: "Потребители които следвам"
     user does not follow you: "%{user} не ви следва."
     recent activity: "Последни действия"
@@ -386,6 +391,7 @@ bg:
     creation form errors: "Маркерът не може да бъде създаден заради следните грешки:"
     successfully created: "Bookmark добавяне"
     successfully deleted: "Отбелязването е премахнато"
+    successfully updated: "Отбелязването е добавено"
     labels placeholder: "Раздели етикетите с запетая."
     save: "Запиши отбелязването"
     confirm delete: "Потвърждавам"
@@ -492,6 +498,7 @@ bg:
     subscribe successful: "Записани сте за този план."
     which day in plan: "Ден %{day} от %{total}"
     must start to complete: "Започни този план и запази завършеното четене"
+    invalid reference: "Няма такава препратка в посочената версия. Опитай друга версия или се свържи с нашия <a href='%{support_url}'>екип</a>."
   registration:
     with facebook: "Влез с Facebook"
     benefits title: "Цялостна опитност"
@@ -558,6 +565,8 @@ bg:
     partners text: "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title: "Нашият преводачески екип"
     learn more: "Научи повече"
+    bible dot com title: "Какво се случи с Bible.com?"
+    bible dot com copy: "Christ Unlimited Ministries на Bud and Betty Miller и старата Bible.com е вече на <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Информация за пресата"
     contact header: "За контакти"
@@ -635,5 +644,22 @@ bg:
       highlights: "Маркирани:"
       'on': "Включи"
       'off': "Изключи"
+  app errors:
+    404 explanation: "Започни тук: <a href='%{reader_path}'>НАЧАЛО</a>. Свържи се с нашия Contact our <a href='%{support_url}'>екип</a>."
+    404 message: "Страницата не съществува."
+    408 message: "Няма връзка със сървъра!"
+    408 explanation: "В момента поправяме този проблем."
+    try again: "Опитай отново"
   versions:
+    courtesy of: "%{abbreviation} от %{publisher}"
+    learn more: "Научи повече"
+    index title: "Възможни версии"
     publisher widget title: "Издател"
+    visit publisher: "Посвети уебстраницата на издателя"
+    about: "Още за тази версия..."
+    read title: "Чети тази версия"
+    other versions: "Други версии от този издател"
+    number of versions field: "Общо врсии:"
+    number of languages field: "Общо езици:"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Публичен домейн"
