--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -156,6 +156,7 @@ cs:
     see my likes: "Zobrazit všechny mé oblíbené"
     successfully deleted: "Poznámka odstraněna"
   ref:
+    loading secondary: "Načítají se odkazy v sekundárním překladu..."
     clear verses: "Zrušit označení veršů"
     choose book and chapter: "Zvolit knihu + kapitolu"
     choose version: "Vybrat překlad"
@@ -177,6 +178,8 @@ cs:
     select another chapter: "Vybrat jinou kapitolu"
     view in reader: "Zobrazit %{reference}"
   users:
+    unverified heading: "Jste téměř u konce!"
+    unverified message: "Vypadá to, že se snažíte přihlásit do účtu, u kterého ještě nebylo provedeno úplné nastavení. Máte před sebou už jen jeden krok: Jednoduše klikněte na ověřovací odkaz, který Vám byl zaslán v potvrzovacím e-mailu z YouVersion. Nemůžete jej najít? Podívejte se do Vaší nevyžádané pošty (spamu) a nebo si nechte znovu poslat <a href='%{resend_path}'>potvrzovací e-mail</a>."
     reset connection: "Promiňte, vyskytla se chyba. Prosím deaktivujte toto připojení a znovu ho připojte."
     settings: "Nastavení"
     no connection friends: "Žádný z vašich %{connection} přátel ještě není zaregistrovaný na YouVersion."
@@ -535,7 +538,7 @@ cs:
     card exp date: "Datum expirace (MMRR)"
     receipt: "Zaslat e-mailem kopii mého dokladu."
     preview: "Náhled daru"
-    header copy: "Společně se můžeme stát generací nejvíce zapálenou pro Bibli v historii. Vaše podpora znamená, že si lidé mohou otevřít Boží Slovo na více platformách, ve více jazycích, ve více překladech a ve více zemích než kdy předtím. Prosím vyplňte formulář níže pro odeslání vašeho daru. Informace o platbě zobrazíme na další stránce."
+    header copy: "Společně se můžeme stát generací nejvíce zapálenou pro Bibli v historii. Vaše podpora znamená, že si lidé mohou otevřít Boží Slovo na více platformách, ve více jazycích, ve více překladech a ve více zemích než kdy předtím. Prosím vyplňte formulář níže pro odeslání vašeho daru. Informace o platbě zobrazíme na další stránce. Přijímáme platby kartami Visa nebo Mastercard."
     header confirm copy: "Společně se můžeme stát generací nejvíce zapálenou pro Bibli v historii. Vaše podpora znamená, že lidé si můžou otevřít Boží Slovo na více platformách, ve více jazycích, ve více překladech a ve více zemích než kdy předtím. Klikněte na \"Darovat nyní\" pro odeslání daru."
     donate now button: "Darovat nyní"
     email header: "YouVersion, služba církve LifeChurch.tv, obdržela váš dar. Žádné zboží nebo služby nebyly poskytnuty výměnou za dar, kromě nehmatatelných náboženských výhod. Prosím kontaktujte giving@lifechurch.tv, pokud máte otázky."
@@ -644,12 +647,16 @@ cs:
   app errors:
     404 explanation: "Možná zkuste začít znovu na <a href='%{reader_path}'>úvodní stránce</a>. Stále máte potíže? Kontaktujte náš <a href='%{support_url}'>tým podpory</a>."
     404 message: "Je nám to líto, ale stránka, kterou hledáte nemohla být nalezena."
-    408 message: "Naše servery naneštěstí neodpověděly včas."
-    408 explanation: "Zkuste to prosím znovu <a href= '%{reload_path}'>obnovením stránky</a>. Obdrželi jsme chybové hlášení a problém budeme co nejrychleji řešit."
+    408 message: "Omlouváme se, ale naše servery naneštěstí neodpověděly včas."
+    408 explanation: "Obdrželi jsme chybové hlášení a každý přetrvávající problém budeme co nejrychleji řešit. Pojďme se podívat jestli vás budeme schopni vrátit zpět ke čtení Bible!"
+    try again: "Zkuste to znovu"
   versions:
+    courtesy of: "%{abbreviation} Vám přináší %{publisher}"
+    learn more: "Zjistit více"
     index title: "Dostupné překlady"
-    publisher widget title: "Autor"
+    publisher widget title: "Vydavatel"
     visit publisher: "Přejít na stránky vydavatele"
+    about: "Více informací o tomto překladu..."
     read title: "Číst tento překlad"
     other versions: "Další překlady tohoto vydavatele"
     number of versions field: "Celkem překladů:"
