--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -629,3 +629,5 @@ cy:
       highlights: "Uwcholeuo:\n\n"
       'on': "Ymlaen"
       'off': "Diffodd"
+  versions:
+    learn more: "Dysgwch Fwy "
