--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -27,7 +27,7 @@ de:
   deleted connection: "Du wurdest erfolgreich von %{connection} abgemeldet."
   deleted connection error: "Entschuldigung, es ist ein Fehler bei der Abmeldung von %{connection} aufgetreten."
   remove connection: "Entfernen"
-  connection users: "Hier sind einige YouVersion-Nutzer, mit denen du bei %{connection} verbunden bist."
+  connection users: "Hier sind einige YouVersion-Nutzer, mit denen du bei %{connection} verbunden bist:"
   connection marketing: "YouVersion macht mehr Spaß mit Freunden! Verbinde dein YouVersion-Konto mit deinen sozialen Netzwerken und finde deine Freunde auf YouVersion blitzschnell. So kannst du ihnen auch auf YV folgen. Mit verbundenen Konten kannst du mit wenigen Klicks Inhalte teilen. Wir werden nie etwas ohne dein Einverständnis posten."
   next step connections: "Als nächstes: Verbinde deine Konten und finde deine Freunde."
   you are now following: "Du folgst jetzt %{username}"
@@ -178,6 +178,7 @@ de:
     view in reader: "Lies %{reference} in der Leseansicht"
   users:
     unverified heading: "Fast fertig!"
+    unverified message: "Es sieht so aus, al ob du dich mit einem Konto anmelden möchtest, dass noch nicht vollständig eingerichtet wurde. Du brauchst nur noch Folgendes zu tun: klicke einfach auf den Bestätigungs-Link in der E-Mail, die du von YouVersion erhalten hast. Du kannst die E-Mail nicht finden? Überprüfe deinen Spam-Ordner oder <a href='%{resend_path}'>lasse sie dir erneut zuschicken</a>."
     reset connection: "Leider ist ein Fehler aufgetreten. Bitte trenne diese Verbindung und dann baue sie wieder auf."
     settings: "Einstellungen"
     no connection friends: "Scheinbar sind noch keine %{connection}-Freunde von dir bei YouVersion."
@@ -536,7 +537,7 @@ de:
     card exp date: "Gültig bis (Monat/Jahr)"
     receipt: "Bitte um Kopie meiner Bestätigung als E-Mail."
     preview: "Vorschau mit Details der Spende"
-    header copy: "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Fülle das Formular aus, um zu spenden. Um die Infos für die Zahlung bitten wir auf den nächsten Seite. "
+    header copy: "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Fülle das Formular aus, um zu spenden. Um die Infos für die Zahlung bitten wir auf den nächsten Seite. Wir akzeptieren Visa- Und Masterkarte."
     header confirm copy: "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Klicke auf \"Jetzt spenden\", um deine Spende zu senden.  "
     donate now button: "Jetzt spenden"
     email header: "YouVersion, ein Dienst von LifeChurch.tv, hat deine Spende erhalten. Als Gegenleistung für diese Spende wurden, abgesehen vom immateriellen, religiösen Nutzen, keine Waren oder Dienstleistungen ausgetauscht. Bei Fragen kannst du dich an giving@lifechurch.tv wenden."
@@ -646,9 +647,10 @@ de:
     404 explanation: "Du kannst es noch einmal von <a href='%{reader_path}'>home page</a> aus versuchen. Gibt es da immer noch Probleme? Kontaktiere unser <a href='%{support_url}'>Support-Team</a>."
     404 message: "Leider kann die Seite, die du suchst, nicht gefunden werden."
     408 message: "Leider haben unsere Server nicht schnell genug geantwortet."
-    408 explanation: "Du kannst es erneut versuchen, indem du die Seite <a href= '%{reload_path}'>aktualisierst</a>. Wir wurden benachrichtigt und werden alle bestehenden Probleme so schnell wie möglich lösen."
+    408 explanation: "Wir wurden benachrichtigt und werden alle bestehenden Probleme so schnell wie möglich lösen. Lass uns probieren, deine Bibel wieder zugänglich zu machen. "
     try again: "Versuche es noch einmal"
   versions:
+    learn more: "Mehr erfahren"
     index title: "Zur Verfügung stehende Versionen"
     publisher widget title: "Herausgeber"
     visit publisher: "Besuche die Website des Herausgebers"
