--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -177,6 +177,8 @@ es:
     select another chapter: "Escoger Capítulo Diferente"
     view in reader: "Ver %{reference} en Lector"
   users:
+    unverified heading: "¡Casi Termina!"
+    unverified message: "Parece que esta intentando ingresar con una cuenta que aún no ha sido configurada completamente.  Solamente le hace falta un paso: Sencillamente haga clic sobre el vinculo de verificación que se encuentra en el email de confirmación que le fue enviado de YouVersion.  ¿No lo encuentra? Revise la carpeta de “spam” o “correo basura” ó bien <a href='%{resend_path}'>renvíe el correo de confirmación de la cuenta</a>."
     reset connection: "Lo sentimos, ha ocurrido un error. Por favor, retire y vuelva a conectar esta conexión."
     settings: "Configuración"
     no connection friends: "Aparentemente ninguno de sus amigos de %{connection} está conectado a YouVersion aún."
@@ -535,8 +537,8 @@ es:
     card exp date: "Fecha de Expiración (MMYY)"
     receipt: "Envíeme por correo electrónico una copia de mi recibo"
     preview: "Vista Previa de la Donación "
-    header copy: "Juntos,podemos convertirnos en la generación más \"Involucrada en la Biblia\" de la historia. Su respaldo significa que las personas podrán abrir la Palabra de Dios en más plataformas, en más idiomas, en más versiones y en mas países que nunca antes. Por favor complete el formulario abajo para realizar su donación. Se solicitará información de forma de pago en la siguiente pantalla."
-    header confirm copy: "Juntos, podemos convertirnos en la generación más \"Involucrada en la Biblia\" de la historia. Su respaldo significa que las personas podran abrir la Palabra de Dios en más plataformas, en más lenguajes. en más versiones y en más países que nunca antes. Presione el botón de \"Donar Ahora\" para realizar su donación."
+    header copy: "Juntos, podemos convertirnos en la generación más \"Involucrada en la Biblia\" de la historia. Su respaldo económico significa que las personas podrán abrir la Palabra de Dios en más plataformas, en más idiomas, en más versiones y en más países que nunca antes. Por favor complete el formulario abajo para realizar su donación. Se solicitará información de forma de pago en la siguiente pantalla.  Aceptamos Visa o Mastercard."
+    header confirm copy: "Juntos, podemos convertirnos en la generación más \"Involucrada en la Biblia\" de la historia. Su respaldo económico significa que las personas podran abrir la Palabra de Dios en más plataformas, en más lenguajes. en más versiones y en más países que nunca antes. Presione el botón de \"Donar Ahora\" para realizar su donación."
     donate now button: "Donar ahora  (EEUU)"
     email header: "YouVersion, un ministerio de LifeChurch.tv, ha recibido su donación. Ningún producto o servicio fue provisto a cambio de dicha donación, a excepción de beneficios religiosos intangibles. Por favor contactenos via giving@lifechurch.tv con sus preguntas."
     email footer: "Su donación ayudará a que muchas personas alrededor del mundo se enamoren de la Palabra de Dios."
@@ -644,16 +646,17 @@ es:
   app errors:
     404 explanation: "Desafortunadamente, no hemos encontrado una página para <em>%{requested_path}</em>. Si crees que esta página debería existir, por favor, permita que nuestro <a href='%{support_url}'>equipo de apoyo </a> sepa, o regresa a la <a href='%{reader_path}'>reader</a>."
     404 message: "Lo sentimos, la página que usted está buscando no puede ser hallada. "
-    408 message: "Desafortunadamente nuestros servidores no respondieron durante el tiempo adecuado."
-    408 explanation: "Puede probar de nuevo <a href= %{reload_path}>recargando</a> la pagina. Hemos sido alertados y resolveremos cualquier problema persistente tan pronto como sea posible."
-    try again: "Intenta nuevamente"
+    408 message: "Lo sentimos, nuestros servidores no respondieron en el tiempo estimado."
+    408 explanation: "Hemos sido alertados y resolveremos cualquier problema persistente tan pronto como sea posible.  ¡Veamos si podemos llevarlo de nuevo a su Plan de Lectura!"
+    try again: "Intente Nuevamente"
   versions:
+    learn more: "Aprenda más"
     index title: "Versiones Disponibles"
     publisher widget title: "Editor"
     visit publisher: "Visite la Página Web del Publicador"
     read title: "Lea Esta Versión"
-    other versions: "Otras Versiones de Este Publicador"
+    other versions: "Otras Versiones de este Editor"
     number of versions field: "Número total de versiones:"
-    number of languages field: "Número total de lenguajes:"
+    number of languages field: "Número total de idiomas:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Dominio público"
