--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -156,6 +156,7 @@ hi:
     see my likes: "मेरी समस्त पसंद देखे"
     successfully deleted: "टिपण्णी हटाई गयी हैं"
   ref:
+    loading secondary: "माध्यमिक संस्करण में रिफरेन्स लोड किया जा रहा हैं ......."
     clear verses: "चयनित पधों को clear करें"
     choose book and chapter: "ग्रन्थ +अध्याय चुनिए "
     choose version: "संस्करण चुनिए "
@@ -608,7 +609,7 @@ hi:
     download now: "बाइबिल App डाउनलोड करें"
     what people: "लोगो की राय इस मुफ्त बाइबिल App के बारें में..."
     t1: "मेरे पास हमेशा प्रभु के वचन उपलब्ध हैं|"
-    t1 copy: "मेरे द्वारा passages को बुकमार्क्स किया गया हैं जो मेरे लिए महत्वपूर्ण हैं| मैंने पाठक योजना के अनुसार एक साल में पूरे योजना को समाप्त किया हैं| इसके लिए धन्यवाद|"
+    t1 copy: "मेरे द्वारा अंशों को बुकमार्क्स किया गया हैं जो मेरे लिए महत्वपूर्ण हैं| मैंने पाठक योजना के अनुसार एक साल में पूरे योजना को समाप्त किया हैं| इसके लिए धन्यवाद|"
     t2: "अतिउत्तम कार्यक्रम!"
     t2 copy: "यह app मुझे योजनाबद्ध तरीके से प्रभु के वचन हररोज़ पढने में सहायता करता हैं |उपयोग में आसान और विभिन विशेषताएँ भी उपलब्ध हैं ......मेरी पसंद!"
     t3: "अद्भुत App"
@@ -650,9 +651,12 @@ hi:
     408 explanation: "दोबारा कोशिश करे <a href= %{reload_path}>reloading</a>.हमे इस सांकेतिक खराबी की जानकारी हैं,दोहराए जाने पर जल्द से जल्द सुधारने की तैयारी हैं| "
     try again: "पुन:कोशिश करे"
   versions:
+    courtesy of: "%{abbreviation} %{publisher}के द्वारा प्रस्तुत किया गया "
+    learn more: "और अधिक जानकारी "
     index title: "उपलब्ध संस्करण "
     publisher widget title: "प्रकाशक "
     visit publisher: "प्रकाशक के वेबसाइट पर जाये "
+    about: "इस संस्करण के बारे में और अधिक जानकारीयाँ........."
     read title: "इस संस्करण को पढ़िए "
     other versions: "इस प्रकाशक के अन्य संस्करण "
     number of versions field: "कुल संस्करण:"
