--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -177,6 +177,8 @@ km:
     select another chapter: "ជ្រើស​រើស​ជំពូក​ផ្សេង"
     view in reader: "បង្ហាញ %{reference} ក្នុង​កម្មវិធីអាន"
   users:
+    unverified heading: "ជិត​ចប់​ហើយ!"
+    unverified message: "លោក​អ្នក​ដូច​ជា​ចង់​ចុះ​ឈ្មោះ​ចូល​មក​ក្នុង គណនី ដែល​មិន​ទាន់​បាន​ចុះ​ឈ្មោះ​ចូល​សព្វ​គ្រប់នៅ​ឡើយ​ទេ។ នៅ​សល់​តែ​មួយ​ជំហាន​ទៀត​ប៉ុណ្ណោះ ដោយ​គ្រាន់​តែ​ចុច​តំណរបញ្ជាក់​ ដើម្បី​ទទួល​អ៊ី​ម៉ែល​បញ្ជាក់​ពី YouVersion។ មិន​ទទួល​បាន​មែន​ទេ? ពិនិត្យ​មើល​នៅ​ក្នុង​ថត​សារ​ឥត​បាន​ការ ឬ <a href='%{resend_path}'>ផ្ញើរ​អ៊ី​ម៉ែល​បញ្ជាក់​សារ​ជា​ថ្មី</a>"
     reset connection: "សូម​ទោស មាន​កំហុស​កើត​មាន​ឡើង។ សូមដក​ចេញ​ហើយ​ភ្ជាប់​ការ​ភ្ជាប់​នេះ​ឡើង​វិញ"
     settings: "ការ​កំណត់"
     no connection friends: "មិន​មានមិត្ត​របស់​អ្នក %{connection} លេច​ឡើង​នៅ​លើ YouVersion នៅ​ឡើយ​ទេ"
@@ -646,7 +648,9 @@ km:
     404 message: "យើង​សូម​ទោស, ទំព័រ​ដែល​អ្នក​កំពុង​រក​មិន​មាន​ទេ។"
     408 message: "សូម​ទោស​ ម៉ាស៊ីន​មេ​របស់​យើង​មិន​ឆ្លើយតប​ក្នុង​កំឡុង​ពេល​បង្ហាញ​នេះ​។"
     408 explanation: "លោក​អ្នក​អាច​សាកល្បង​ម្ដង​ទៀត​ដោយ <a href= '%{reload_path}'>ទាញ​ឡើង​វិញ</a> លើ​ទំព័រ។ មាន​អ្នក​រាយ​ការណ៍​ប្រាប់​យើង ហើយ​យើង​នឹង​ដោះ​ស្រាយ​បញ្ហា​អោយ​ឆាប់​ជា​ទី​បំផុត។"
+    try again: "សូម​ព្យាយាម​ម្ដង​ទៀត"
   versions:
+    learn more: "រៀន​ថែម​ទៀត"
     index title: "មាន​ជំនាន់​នេះ"
     publisher widget title: "អ្នក​បោះ​ផ្សាយ"
     visit publisher: "ទស្សនា​វែប​សាយ​អ្នក​បោះ​ផ្សាយ"
