--- a/config/locales/ms.yml
+++ b/config/locales/ms.yml
@@ -537,7 +537,7 @@ ms:
     card exp date: "Tarikh tamat tempoh (MMYY)"
     receipt: "E-melkan saya salinan resit."
     preview: "Previu Sumbangan"
-    header copy: "Kita boleh menjadi generasi yang paling terlibat dalam Alkitab. Sokongan anda membenarkan Firman Allah ditemui pada lebih platform, dalam lebih bahasa, lebih versi, dan dalam lebih negara daripada dahulu. Sila isikan borang di bawah untuk membuat sumbangan anda. Informasi bayaran akan dikutip di skrin yang berikut."
+    header copy: "Kita boleh menjadi generasi yang paling terlibat dalam Alkitab. Sokongan anda membenarkan Firman Allah ditemui pada lebih platform, dalam lebih bahasa, lebih versi, dan dalam lebih negara daripada dahulu. Sila isikan borang di bawah untuk membuat sumbangan anda. Informasi bayaran akan dikutip di skrin yang berikut. Kami menerima Visa ataupun Mastercard."
     header confirm copy: "Kita boleh menjadi generasi yang paling terlibat dalam Alkitab. Sokongan anda membenarkan Firman Allah ditemui pada lebih platform, dalam lebih bahasa, lebih versi, dan dalam lebih negara daripada dahulu. Klik Buat Sumbangan Sekarang untuk membuat sumbangan anda."
     donate now button: "Buat Sumbangan Sekarang"
     email header: "YouVersion, sebahagian daripada LifeChurch.tv, sudah menerima sumbangan anda. Tiada barangan atau perkhidmatan disediakan sebagai ganti sumbangan, kecuali manfaat keagamaan tak ketara. Sila hubungi giving@lifechurch.tv dengan pertanyaan anda."
@@ -647,9 +647,10 @@ ms:
     404 explanation: "Anda boleh bermula kembali dari <a href='%{reader_path}'>halaman utama</a>. Sekiranya masih ada kesulitan, sila hubungi <a href='%{support_url}'>pihak sokongan</a> kami."
     404 message: "Maaf, halaman yang diminta tidak tercari."
     408 message: "Maaf, server kami terlewat respons."
-    408 explanation: "Anda boleh cuba <a href= %{reload_path}>reload</a> halaman itu. Kami sudah diberitahu tentang hal ini dan akan menyelesaikan masalah yang berterusan secepat mungkin."
+    408 explanation: "Kami sudah diberitahu tentang hal ini dan akan menyelesaikan masalah yang berterusan secepat mungkin. Semoga anda dapat pantas kembali kepada bacaan Alkitab!"
     try again: "Cuba lagi"
   versions:
+    learn more: "Ketahui Lebih Lanjut"
     index title: "Versi yang Tersedia"
     publisher widget title: "Penerbit"
     visit publisher: "Kunjungi Laman Web Penerbit"
