--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -443,7 +443,7 @@ nl:
     reading completed _ mark and show next: "Volgende:%{next_reference}"
     which reading: "%{current} van %{total}"
     done reading: "Gedaan"
-    no content: "Je leesplan heeft voor vandaag niets geplant daarom is het gemarkeerd als voltooid"
+    no content: "Je leesplan heeft voor vandaag niets gepland daarom is het gemarkeerd als voltooid."
     read today: "Bekijk de Lezing van Vandaag"
     completion status _ below percentage: "Voltooid"
     current progress html: "Dag <b>%{day}</b> van <b>%{total_days}</b>"
@@ -537,7 +537,7 @@ nl:
     card exp date: "Expiratie datum (MMJJ)"
     receipt: "E-mail me een kopie van mijn bon"
     preview: "Bekijk Gift"
-    header copy: "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen kunnen openen dan ooit te voren. Vul het formulier hieronder in om je donatie te doen. Op de volgende pagina zullen we u om uw betaalgegevens vragen."
+    header copy: "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen kunnen openen dan ooit te voren. Vul het formulier hieronder in om je donatie te doen. Op de volgende pagina zullen we u om uw betaalgegevens vragen. We aanvaarden Visa of Mastercard"
     header confirm copy: "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen dan ooit tevoren kunnen openen. Klik, Doneer nu om uw donatie te doen."
     donate now button: "Doneer Nu"
     email header: "YouVersion, een onderdeel van LifeChurch.tv, heeft uw donatie ontvangen. Er zijn geen goederen of diensten verstrekt in ruil voor de donatie, behalve immateriële religieuze voordelen. Neem contact op met giving@lifechurch.tv als u verder nog vragen heeft."
@@ -647,9 +647,10 @@ nl:
     404 explanation: "Je kan opnieuw starten vanaf de <a href='%{reader_path}'>beginpagina</a>. Ervaar je nog steeds problemen? Neem contact op met onze <a href='%{support_url}'>ondersteuningsteam</a>."
     404 message: "Sorry, de pagina die je zoekt kan niet worden gevonden."
     408 message: "Jammer genoeg konden onze servers niet tijdig reageren."
-    408 explanation: "Je kan het nog eens proberen door de pagina te <a href= %{reload_path}>herladen</a>. We zijn op de hoogte van het probleem en zullen het zo snel mogelijk verhelpen."
+    408 explanation: "We zijn op de hoogte van het probleem en zullen het zo snel mogelijk verhelpen. Laten we kijken als we je weer de Bijbel kunnen laten lezen!"
     try again: "opnieuw proberen"
   versions:
+    learn more: "Leer Meer"
     index title: "Beschikbare Versies"
     publisher widget title: "Uitgever"
     visit publisher: "Bezoek Website van de Uitgever"
