--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -156,6 +156,7 @@ ro:
     see my likes: "Vezi toate aprecierile mele."
     successfully deleted: "Notiță ștearsă"
   ref:
+    loading secondary: "Se încarcă referinţa în versiunea secundară..."
     clear verses: "Șterge versetele selectate."
     choose book and chapter: "Alege carte + capitol"
     choose version: "Alege versiunea"
@@ -537,7 +538,7 @@ ro:
     card exp date: "Data expirării (luna, anul)"
     receipt: "Trimite-mi prin e-mail copia chitanței."
     preview: "Previzualizare donație"
-    header copy: "Împreună, putem deveni generația cea mai conectată la Biblie din istorie. Suportul tău înseamnă ca oamenii să poată accesa Cuvântul Lui Dumnezeu de pe mai multe platforme, în mai multe limbi, în mai multe variante și în mai multe țări ca oricând. Completează formularul de mai jos pentru a face o donație. Informațiile despre plată le culegem de pe pagina următoare."
+    header copy: "Împreună, putem deveni generația cea mai conectată la Biblie din istorie. Suportul tău înseamnă ca oamenii să poată accesa Cuvântul Lui Dumnezeu de pe mai multe platforme, în mai multe limbi, în mai multe variante și în mai multe țări ca oricând. Completează formularul de mai jos pentru a face o donație. Informațiile despre plată le culegem de pe pagina următoare. Acceptăm Visa sau Mastercard."
     header confirm copy: "Împreună, putem deveni generația cea mai conectată la Biblie din istorie. Suportul tău înseamnă ca oamenii să poată accesa Cuvântul Lui Dumnezeu de pe mai multe platforme, în mai multe limbi, în mai multe variante și în mai multe țări ca oricând. Fă click pe „Donează acum” ca să faci o donație."
     donate now button: "Donează acum (SUA)"
     email header: "YouVersion, misiune a LifeChurch.tv, a primit donația ta. Nu s-au trimis în schimb nici un fel de bunuri sau servicii, cu excepția valorilor religioase intangibile. Contactează giving@lifechurch.tv pentru întrebări."
@@ -650,9 +651,12 @@ ro:
     408 explanation: "Am fost notificați și ne vom ocupa de toate problemele persistente în cel mai scurt timp. Acum încercăm să te ducem înapoi la planul tău de citire."
     try again: "Încearcă din nou"
   versions:
+    courtesy of: "%{abbreviation} îţi este oferit(ă) de %{publisher}"
+    learn more: "Află mai mult"
     index title: "Versiuni disponibile"
     publisher widget title: "Editor"
     visit publisher: "Vizitează website-ul editorului"
+    about: "Mai multe despre această versiune..."
     read title: "Citește această versiune"
     other versions: "Alte versiuni de la același editor"
     number of versions field: "Total versiuni:"
