--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -156,6 +156,7 @@ sk:
     see my likes: "Zobraziť všetky moje označenia páči sa mi to"
     successfully deleted: "Poznámka odstránená"
   ref:
+    loading secondary: "Načítavajú sa súradnice v sekundárnom preklade..."
     clear verses: "Zrušiť označenie veršov"
     choose book and chapter: "Zvoliť knihu a kapitolu"
     choose version: "Zvoliť preklad"
@@ -537,7 +538,7 @@ sk:
     card exp date: "Dátum expirácie (MMRR)"
     receipt: "Zaslať kópiu potvrdenia emailom."
     preview: "Zobraziť náhľad príspevku"
-    header copy: "Spoločne sa môžme stať generáciou najviac zapálenou pre Bibliu v dejinách. Vaša podpora znamená, že ľudia si môžu otvoriť Božie Slovo na viac platformách, vo viac jazykoch, vo viac prekladoch a vo viac krajinách, ako kedykoľvek predtým. Na poslanie príspevku prosím vyplňte nižšie uvedený formulár. Platobné údaje následne zadáte na ďalšej strane."
+    header copy: "Spoločne sa môžme stať generáciou najviac zapálenou pre Bibliu v dejinách. Vaša podpora znamená, že ľudia si môžu otvoriť Božie Slovo na viac platformách, vo viac jazykoch, vo viac prekladoch a vo viac krajinách, ako kedykoľvek predtým. Na poslanie príspevku prosím vyplňte nižšie uvedený formulár. Platobné údaje následne zadáte na ďalšej strane. Akceptujeme karty Visa alebo MasterCard."
     header confirm copy: "Spoločne sa môžme stať generáciou najviac zapálenou pre Bibliu v dejinách. Vaša podpora znamená, že ľudia si môžu otvoriť Božie Slovo na viac platformách, vo viac jazykoch, vo viac prekladoch a vo viac krajinách, ako kedykoľvek predtým. Kliknutím na Prispieť teraz pošlete váš príspevok."
     donate now button: "Prispejte teraz"
     email header: "YouVersion, patriace pod LifeChurch.tv, obdržalo váš príspevok. Nebol zaňho poskytnutý žiadny tovar, okrem nehmotných duchovných dobier. Ak máte akékoľvek otázky, kontaktujte prosím giving@lifechurch.tv."
@@ -646,13 +647,16 @@ sk:
   app errors:
     404 explanation: "Skúste začať odznova na <a href='%{reader_path}'>úvodnej stránke</a>. Ak problém stále pretrváva, kontaktujte náš <a href='%{support_url}'>tím podpory</a>."
     404 message: "Prepáčte, ale stránku, ktorú hľadáte, sa nepodarilo nájsť."
-    408 message: "Žiaľ, časový limit na odpoveď nášho servera vypršal."
-    408 explanation: "Môžete sa pokúsiť stránku <a href='%{reload_path}'>opäť načítať</a>. Na tento problém sme boli upozornení a odstránime ho tak rýchlo, ako to bude možné."
+    408 message: "Je nám to ľúto, ale časový limit na odpoveď nášho servera vypršal."
+    408 explanation: "Na situáciu sme boli upozornení a pretrvávajúce problémy odstránime čo najskôr. Pozrime sa, či sa dá vrátiť na vaše čítanie Biblie!"
     try again: "Skúste znova"
   versions:
+    courtesy of: "%{abbreviation} Vám prináša %{publisher}"
+    learn more: "Zistiť viac"
     index title: "Dostupné preklady"
     publisher widget title: "Vydavateľ"
     visit publisher: "Navštívte webstránku vydavateľa"
+    about: "Viac informácií o tomto preklade..."
     read title: "Čítať tento preklad"
     other versions: "Ďalšie preklady od tohto vydavateľa"
     number of versions field: "Počet prekladov:"
