--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -156,6 +156,7 @@ sv:
     see my likes: "Se alla mina gillade"
     successfully deleted: "Anteckning borttagen"
   ref:
+    loading secondary: "Laddar hänvisningar i sekundär översättning"
     clear verses: "Ta bort markerade verser"
     choose book and chapter: "Välj bok + kapitel"
     choose version: "Välj översättning"
@@ -537,7 +538,7 @@ sv:
     card exp date: "Utgångsdatum (MMÅÅ)"
     receipt: "E-posta mig en kopia av kvittot."
     preview: "Förhandsgranska donation"
-    header copy: "Tillsammans kan vi bli den generation genom tiderna som är mest engagerade i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Fyll i formuläret nedan för att göra din donation.  Vi samlar in betalningsinformation på nästa sida."
+    header copy: "Tillsammans kan vi bli den generation genom tiderna som är mest engagerad i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Fyll i formuläret nedan för att göra din donation.  Du anger betalningsinformation på nästa sida. Vi accepterar Visa och Mastercard."
     header confirm copy: "Tillsammans kan vi bli den generation genom tiderna som är mest engagerade i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Klicka på Donera nu för att göra en donation."
     donate now button: "Donera nu"
     email header: "YouVersion, en del av LifeChurch.tv har mottagit din donation. Inga varor eller tjänster lämnades i utbyte för donation förutom immateriella religiösa förmåner. Vänligen kontakta giving@lifechurch.tv med frågor."
@@ -647,12 +648,15 @@ sv:
     404 explanation: "Du kan pröva att gå tillbaka till <a href='%{reader_path}'>startsidan</a>.\nOm du fortfarande har problem kan du kontakta vår <a href='%{support_url}'>supportgrupp</a>."
     404 message: "Tyvärr, men sidan du letar efter kan inte hittas."
     408 message: "Tyvärr svarade inte våra servrar i tid."
-    408 explanation: "Du kan försöka igen genom att <a href= %{reload_path}>uppdatera</a> sidan. Vi har blivit informerade och kommer se till att åtgärda eventuella problem så fort som möjligt."
+    408 explanation: "Vi har blivit informerade och kommer se till att åtgärda eventuella problem så fort som möjligt. Låt oss se om vi kan få dig tillbaka till din bibelläsning!"
     try again: "Försök igen"
   versions:
+    courtesy of: "%{abbreviation} tillhandahållen av %{publisher}"
+    learn more: "Läs mer"
     index title: "Tillgängliga översättningar"
     publisher widget title: "Utgivare"
     visit publisher: "Besök utgivarens hemsida"
+    about: "Läs mer om denna översättning..."
     read title: "Läs den här översättningen"
     other versions: "Andra översättningar från denna utgivare"
     number of versions field: "Totalt antal översättningar:"
