--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -3,9 +3,9 @@ tl:
   celebrating 50MM: "Ipinagdiriwang 50 Million App Installs! "
   link: "Link"
   site search: "YouVersion Search"
-  auth error: "Paumanhin, may problema sa iyong username at password. Magsign-in sa YouVersion upang magpatuloy."
-  download: "Magdownload"
-  visit link: "Bumisita ng Link"
+  auth error: "Paumanhin, may problema sa iyong username o password. Magsign-in sa YouVersion upang magpatuloy."
+  download: "Mag-download"
+  visit link: "Bumisita sa Link"
   about title: "Tungkol sa YouVersion"
   make a donation: "Magbigay ng Donasyon"
   thanks for your donation: "Salamat sa iyong donasyon!"
@@ -154,12 +154,13 @@ tl:
     notes i like: "Mga Talang Gusto Ko"
     none found: "Walang makitang mga tala..."
     see my likes: "Tingnan lahat ang mga Gusto Ko"
-    successfully deleted: "Tala Naalis na"
+    successfully deleted: "Naalis na Tala"
   ref:
-    clear verses: "Burahin lahat ng napiling verses"
+    loading secondary: "Ikinakarga ang Sanggunian sa Ikalawang Salin..."
+    clear verses: "Burahin ang Napiling Talata"
     choose book and chapter: "Pumili ng Aklat + Kabanata"
     choose version: "Pumili ng Salin"
-    choose second version: "Pumili ng Sekondaryang Bersyon"
+    choose second version: "Pumili ng Ikalawang Bersyon"
     share: "Ibahagi"
     share now: "Magbahagi"
     selected: "Pinili"
@@ -170,11 +171,11 @@ tl:
     about the version: "Tungkol sa %{version}"
     settings: "Settings ng Reader"
     invalid chapter title: "Tungkol sa Bersyon na Ito"
-    invalid chapter text: "Ang chapter ay wala sa bersyong ito."
-    invalid secondary chapter text: "Ang chapter na ito ay wala sa iyong sekondaryang bersyon."
+    invalid chapter text: "Ang kabanatang ito ay wala sa napiling bersyon."
+    invalid secondary chapter text: "Ang kabanatang ito ay wala sa iyong ikalawang bersyon."
     no secondary version title: "Tungkol sa Magkahilerang Paghahambing"
     no secondary version text: "Ang %{language_name} ay may isang salin lamang, kaya hindi kami makapili ng ikalawang salin para sa iyo. Pumili ng ikalawang salin para sa iyong magkahilerang paghahambing."
-    select another chapter: "Pumili ng Ibang Chapter"
+    select another chapter: "Pumili ng Ibang Kabanata"
     view in reader: "Tingnan ang %{reference} sa Reader"
   users:
     unverified heading: "Halos Tapos Na!"
@@ -187,7 +188,7 @@ tl:
     email address: "Email Address"
     user name: "Username"
     agreement: "Sang-ayon ako sa %{terms_link} ng Youversion."
-    terms and conditions: "Mga Termino at Mga Kondisyon"
+    terms and conditions: "mga termino at kondisyon"
     facebook sign up success: "Magaling! Na-authorize mo na ang Facebook. Pumili ng Youversion ng username at password upang magpatuloy."
     register: "Mag-sign Up"
     thanks for registering: "Salamat sa pagrehistro!"
@@ -213,8 +214,8 @@ tl:
     my password: "Palitan ang Password"
     edit password: "Baguhin ang Password"
     picture: "Larawan"
-    edit picture: "Palitan ang Picture"
-    edit notifications: "I-manage ang mga Notifications"
+    edit picture: "Palitan ang Larawan"
+    edit notifications: "Pangasiwaan ang mga Paalala"
     edit connections: "Mga Accounts na Konektado"
     edit devices: "Mga Devices na Konektado"
     edit account_existence: "Burahin ang Account"
@@ -229,15 +230,15 @@ tl:
     my friends: "Mga Kaibigan"
     my notes: "Mga tala"
     user friends: "Mga Kaibigan ni %{user}"
-    my bookmarks: "Ang Aking Mga Bookmarks"
+    my bookmarks: "Aking Mga Bookmarks"
     user bookmarks: "Mga Bookmarks ni %{user}"
     my likes: "Mga Gusto Ko"
     user likes: "Mga Gusto ni %{user}"
     my badges: "Aking mga Tsapa"
     revised date: "Huling na-revise noong %{date}"
-    update email copy: "Ipasok ang bagong email address at i-klik ang Update Email. Ipadadala namin sa iyo ang link para kumpirmahin ang iyong email address."
+    update email copy: "Maglagay ng bagong email address at pindutin ang Update Email. Ipadadala namin sa iyo ang link para kumpirmahin ang iyong email address."
     edit email: "I-update ang Email Address"
-    update email check: "Pakichek ang iyong email address at i-klik and link para kumpirmahin ang iyong bagong email address."
+    update email check: "Pakitingnan ang iyong email address at pindutin ang link para kumpirmahin ang iyong bagong email address."
     confirm update email success: "Salamat! Na-update mo na ang iyong email address."
     confirm update email error: "Paumanhin, may mga problema sa  planong pagbabago sa email address."
     account confirmed: "Nakonfirm na ang iyong account!"
@@ -247,17 +248,17 @@ tl:
     confirm password to continue: "Maaaring ipasok ang iyong password para mag-sign-in at magsimula."
     invalid email forgot: "Paumanhin, wala kaming mahanap na ganyang email address. Pakiulit po."
     error deleting account: "Paumanhin, may problema sa aming koneksyon. Pakiulit po o kaya ay kontakin ang aming support."
-    send new password button: "Magpadala Ng Bagong Password"
-    forgot password copy: "Ipasok ang email address at i-klik ang  Magpadala Ng Bagong Password, at ipadadala namin sa email mo ang bagong password."
-    forgot password check: "Tagumpay! I-chek ang iyong email para sa iyong bagong password."
+    send new password button: "Magpadala ng Bagong Password"
+    forgot password copy: "Maglagay ng email address at pindutin ang Magpadala Ng Bagong Password, at ipadadala namin sa email mo ang bagong password."
+    forgot password check: "Tagumpay! Tingnan ang iyong email para sa iyong bagong password."
     yes reset: "Oo, i-reset ang aking password"
     yes reset and log out: "Oo, i-sign out ako at i-reset ang aking password"
     forgot password: "Nakalimutan ang password?"
-    resend success: "Ang iyong email para kumpirmahin ay naipadala ulit. Paki-chek ang iyong email."
-    resend error: "Paumanhin, may mga problema sa pag-resend ng iyong email para kumpirmahin. Siguraduhing ang iyong mga naipasok na impormasyon ay valid at ang email ay narehistro at nakumpirma."
+    resend success: "Ang iyong email para kumpirmahin ay naipadala ulit. Pakitingnan ang iyong email."
+    resend error: "Paumanhin, may mga problema sa pagpapadala ng iyong email para kumpirmahin ang mga pagbabagong nais mo tungkol sa iyong account. Siguraduhing ang iyong mga naipasok na impormasyon ay tama at ang email na ginamit ay narehistro at nakumpirma na."
     resend confirmation title: "Nakuha mo na ba ang email para kumpirmahin?"
     resend confirmation copy: "Ipasok ang email address na ginamit mo sa pagrehistro sa ibaba at ipadadala namin sa iyo ang isa pang email para kumpirmahin."
-    resend confirmation button: "I-resend ang kumpirmasyon"
+    resend confirmation button: "Ipadala muli ang Kumpirmasyon"
     privacy:
       policy: "%{youversion} Patakarang Pangpribado"
       intro: "Ang YouVersion, isang Website at Aplikasyon na pagmamay-ari ng LifeChurch.tv, ay pinapahalagahan ang  lahat ng impormasyon tungkol sa iyo na nagamit at nai-share. Kami ay nagtitiwala sa mga sumusunod na pahayag na iyong maiintindihan kung paano kolektahin, gamitin, at protektahan ang mga impormasyon iyong naibigay sa aming site o app. Hindi namin gagamitin o i-shashare ang iyong impormasyon sa kanino man ayon din sa Patakarang Pangpribado."
@@ -351,15 +352,15 @@ tl:
       current password: "Kasalukuyang Password"
       new password: "Bagong Password"
       confirm password: "I-confirm ang Password"
-      avatar file: "Pumili ng file para sa iyong picture"
-      avatar help: "Ang mga imaheng pwedeng gamitin ay may format na JPG, PNG, at GIF. Ang iyong imahe ay ikokonvert sa 48x48 na thumbnail. Ang maksimum na file size ay 1MB."
+      avatar file: "Pumili ng file para sa iyong larawan"
+      avatar help: "Ang mga imaheng pwedeng gamitin ay may format na JPG, PNG, at GIF. Ang iyong imahe ay ilalagay sa 48x48 na thumbnail. Ang pinakamalaking file size ay 1MB."
       picture error: "Paumanhin, may pagkakamali sa pag-update ng iyong litrato. "
       picture_empty: "Maaaring pumili ng litrato para i-upload"
       picture_too_large: "Ang litrato ay dapat kulang sa 1 megabyte"
       picture_invalid_type: "Ang litrato ay dapat JPG, PNG, o GIF"
       picture_creation form errors: "Ang (mga) sumusunod na error ay balakid sa pag-update ng iyong litrato:"
-      updated picture: "Tagumpay! Na-update mo ang iyong picture."
-      updated notifications: "Tagumpay! Na-update mo ang iyong mga notification settings."
+      updated picture: "Tagumpay! Na-update mo ang iyong larawan."
+      updated notifications: "Tagumpay! Na-update mo ang iyong mga notification setting."
       notifications token error: "Di valid na token, maaaring mag-sign-in para ayusin ang iyong pang-abisong mga setting. "
       notification errors: "Ang mga sumusunod na error(s) ang dahilan ng hindi pag-update ng iyong mga abiso:"
       edit: "I-edit"
@@ -469,14 +470,14 @@ tl:
     search members: "Search"
     email_on: "Buksan ang Delivery"
     email_off: "Patayin ang Delivery"
-    email delivery text: "Buksan ang email delivery upang matanggap mo ang iyong araw-araw na reading plan content sa iyong inbox. Pumili ng oras  kung kailan mo gustong matanggap ang email at ang bersyon ng Bibliya na angkop para sa iyo."
+    email delivery text: "Buksan ang email delivery upang matanggap ang iyong araw-araw na reading plan content sa iyong inbox. Pumili ng oras  kung kailan mo gustong matanggap ang email at ang bersyon ng Bibliya na angkop para sa iyo."
     email delivery: "Email Delivery"
     morning: "Umaga"
     afternoon: "Hapon"
     evening: "Gabi"
-    delivery time: "Oras ng Pagdeliver"
-    delivery version: "Bersyon ng Pagdeliver"
-    add members placeholder: "Pangalan ng miyembro ng YouVersion"
+    delivery time: "Oras ng Pagpapadala:"
+    delivery version: "Bersyon sa Pagdeliver"
+    add members placeholder: "Pangalan ng Miyembro ng YouVersion"
     add member: "Add"
     email edit: "I-edit"
     unsubscribe successful: "Nakapag-unsubscribe ka sa plan na ito."
@@ -484,17 +485,17 @@ tl:
     partner added successful: "Tagumpay! Si %{username} ay may pananagutan sa plan na ito."
     partner removed successful: "Si %{username} ay wala nang pananagutan sa plan na ito."
     make public successful: "Tagumpay! Ang iyong plan ay pambubliko."
-    make private successful: "Ang iyong plan ay pampribado."
-    reminder on successful: "Tagumpay! Ang mga paalalang pang araw-araw na email ay maipadadala."
+    make private successful: "Ang iyong plan ay pampribado na."
+    reminder on successful: "Tagumpay! Ang mga paalalang pang araw-araw ay maipadadala sa iyong email."
     reminder off successful: "Ang mga paalalang pang araw-araw ay hindi na maipadadala."
     email delivery on successful: "Tagumpay! Ang mga pang araw-araw na babasahin ay maipadadala sa pamamagitan ng email."
     email delivery off successful: "Ang mga pang araw-araw na babasahin ay hindi na maipadadala sa email."
     email delivery updated successful: "Tagumpay! Ang mga settings sa pagtanggap ng email ay na-update na."
-    report on successful: "Tagumpay! Ang mga lingguhang accountability reports ay maipadadala."
-    report off successful: "Ang mga lingguhang accountability reports ay hindi na maipadadala."
+    report on successful: "Tagumpay! Ang mga lingguhang accountability report ay maipadadala."
+    report off successful: "Ang mga lingguhang accountability report ay hindi na maipadadala."
     catch up successful: "Tagumpay! Nakahabol ka na sa iyong reading plan."
-    restart successful: "Ang iyong Plan ay bumalik ulit mula sa umpisa."
-    subscribe successful: "Magaling! Naka-subscribe ka sa plan na ito."
+    restart successful: "Ang iyong Plano ay bumalik ulit mula sa simula."
+    subscribe successful: "Magaling! Naka-subscribe ka sa plano na ito."
     which day in plan: "Araw %{day} ng %{total}"
     must start to complete: "Simulan itong plano para ma-save ang mga natapos na babasahin!"
     invalid reference: "Paumanhin, isa sa mga sangguniang talata ng Bibliya para sa babasahing ito ay maaaring hindi kasama sa napiling salin. Maaaring pumili ng ibang salin ng Bibliya sa itaas. Kung patuloy na nakikita ang mensahe tungkol sa pagkakamaling ito, paki bigay alam sa aming <a href='%{support_url}'>support team</a>. Salamat po."
@@ -502,9 +503,9 @@ tl:
     with facebook: "Mag-sign up gamit ang Facebook"
     benefits title: "Tuklasin ang Kakaibang Karanasan"
     benefits blurb: "Sa paggawa ng YouVersion account, magkakaroon ka ng access sa  ibang tampok tulad ng mga bookmark at mga tala. Makikita mo ang mga ito sa anumang device kung kapag naka-sign in. Madali ding magbahagi ng Bibliya sa iyong mga kaibigan, kaya sign up na!"
-    plan blurb: "Mukhang gusto mong mag-umpisa ng Reading Plan. Matutulungan ka nitong gawin ang Bibliya bilang bahagi ng iyong pang araw-araw na buhay. Magsign-in na o gumawa ng account sa ibaba at mag-umpisa na!"
-    bookmark blurb: "Mukhang gusto mong gumamit ng bookmark. Magaling! Matutulungan ka nitong makita ang mga verses na nais mong i-memorize, i-share o kaya ay markahan bilang paborito. Magsign-in na o gumawa ng account sa ibaba at mag-umpisa na!"
-    friends blurb: "Mukhang gusto mong makipag-interact sa mga Kaibigan. Magandang ideya! Magagawa mong mai-share ang iyong napag-aaralan at magtulungan ang bawat isa sa hangaring magbasa. Magsign-in na o gumawa ng account sa ibaba at mag-umpisa na!"
+    plan blurb: "Mukhang gusto mong mag-umpisa ng Reading Plan. Matutulungan ka nitong gawin ang Bibliya bilang bahagi ng iyong pang araw-araw na buhay. Magsign-in o gumawa ng account sa ibaba at mag-umpisa na!"
+    bookmark blurb: "Mukhang gusto mong gumamit ng bookmark. Magaling! Matutulungan ka nitong makita ang mga talata na nais mong tandaan, ibahagi o kaya ay markahan bilang paborito. Magsign-in o gumawa ng account sa ibaba at mag-umpisa na!"
+    friends blurb: "Mukhang gusto mong makipag-ugnayan sa mga Kaibigan. Magandang ideya! Magagawa mong maibahagi ang iyong napag-aaralan at makipagtulungan sa bawat isa para manatili sa iyong plano. Magsign-in o gumawa ng account sa ibaba at mag-umpisa na!"
     highlight blurb: "Mukhang nais mong i-highlight ang kasulatan. Mabuti! Ang mga ito ay makakatulong mag-organisa at magtanda ng mga paboritong berso. Sign in o gumawa ng account sa ibaba at simulan!"
     note blurb: "Mukhang nais mong sumulat ng note tungkol sa kasulatan. Mabuti! Ang mga note ay maaring makatulong sa pag-alala o pag-organisa ng katotohanang iyong madidiskubre sa Salita ng Diyos. Sign in o gumawa ng account sa ibaba at simulan!"
   audio:
@@ -650,9 +651,12 @@ tl:
     408 explanation: "Subukan mo ulit sa pamamagitan ng <a href= %{reload_path}>pag-reload</a> ng pahina. Kami ay naalerto na at tutugunan ang paulit-ulit na mga problema sa lalong madaling panahon.  "
     try again: "Subukang Muli"
   versions:
+    courtesy of: "%{abbreviation} mula sa %{publisher}"
+    learn more: "Higit na Impormasyon"
     index title: "Mga Maaaring Gamiting Salin"
     publisher widget title: "Naglathala"
     visit publisher: "Bisitahin ang Website ng Tagalathala"
+    about: "Alamin ang tungkol sa salin na ito..."
     read title: "Basahin Itong Bersyon"
     other versions: "Mga Ibang Salin Mula sa Tagapaglathala"
     number of versions field: "Kabuuang Mga Salin:"
