--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -66,6 +66,7 @@ en-GB:
   successful sign-out: "Signed out!"
   invalid login: "Invalid Username or Password"
   invalid password: "Incorrect Password"
+  sign back in: "For your security, logins expire after two weeks. Please sign in again."
   youversion: "YouVersion"
   username or email prompt: "Username (or Email)"
   password prompt: "Password"
@@ -155,6 +156,7 @@ en-GB:
     see my likes: "See All My Likes"
     successfully deleted: "Note Removed"
   ref:
+    loading secondary: "Loading Reference in Secondary Version..."
     clear verses: "Clear Selected Verses"
     choose book and chapter: "Choose Book + Chapter"
     choose version: "Choose Version"
@@ -176,6 +178,8 @@ en-GB:
     select another chapter: "Pick a Different Chapter"
     view in reader: "View %{reference} in Reader"
   users:
+    unverified heading: "Almost Done!"
+    unverified message: "It looks like you're trying to sign in to an account that hasn't been set up completely. You only have one more step: simply click on the verification link in the confirmation email you received from YouVersion. Can't find it? Check your spam folder or <a href='%{resend_path}'>resend the confirmation email</a>."
     reset connection: "Sorry, an error has occurred. Please remove and then reconnect this connection."
     settings: "Settings"
     no connection friends: "None of your %{connection} friends appear to be on YouVersion yet."
@@ -194,6 +198,7 @@ en-GB:
     follow: "Follow"
     follow user: "Follow %{user}"
     unfollow: "Unfollow"
+    unfollow user: "Unfollow %{user}"
     following title: "People I'm Following"
     user does not follow you: "%{user} does not follow you."
     recent activity: "Recent Activity"
@@ -386,6 +391,7 @@ en-GB:
     creation form errors: "The following error(s) prevented creation of your bookmark:"
     successfully created: "Bookmark Added"
     successfully deleted: "Bookmark Removed"
+    successfully updated: "Bookmark Updated"
     labels placeholder: "Separate multiple labels with commas."
     save: "Save Bookmark"
     confirm delete: "Yes, I'm sure"
@@ -492,6 +498,7 @@ en-GB:
     subscribe successful: "Great! You're subscribed to this plan."
     which day in plan: "Day %{day} of %{total}"
     must start to complete: "Start this plan to save completed readings!"
+    invalid reference: "Sorry, one of the scripture references for this reading may not exist in the selected version. Try selecting a different version, above. If you continue to see this message, please let our <a href='%{support_url}'>support team</a> know about the issue."
   registration:
     with facebook: "Sign up with Facebook"
     benefits title: "Get the Full Experience"
@@ -558,6 +565,8 @@ en-GB:
     partners text: "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title: "Our Translation Teams"
     learn more: "Learn More"
+    bible dot com title: "What happened to the old Bible.com?"
+    bible dot com copy: "If you are looking for the Christ Unlimited Ministries content by Bud and Betty Miller or the old Bible.com website please visit their new website at <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Press Area"
     contact header: "Press Contact Information"
@@ -636,7 +645,21 @@ en-GB:
       'on': "On"
       'off': "Off"
   app errors:
+    404 explanation: "You might try starting again from the <a href='%{reader_path}'>home page</a>. Still having trouble? Contact our <a href='%{support_url}'>support team</a>."
+    404 message: "We're sorry, the page you're looking for can't be found."
+    408 message: "We're sorry, but our servers didn't respond in a timely fashion."
+    408 explanation: "We've been alerted and will address any persistent issues as quickly as possible. Let's see if we can get you back to your Bible reading!"
     try again: "Try Again"
   versions:
+    courtesy of: "%{abbreviation} brought to you by %{publisher}"
+    learn more: "Learn More"
+    index title: "Available Versions"
     publisher widget title: "Publisher"
+    visit publisher: "Visit Publisher's Website"
+    about: "Learn more about this version..."
+    read title: "Read This Version"
+    other versions: "Other Versions from this Publisher"
+    number of versions field: "Total Versions:"
+    number of languages field: "Total Languages:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Public Domain"
