--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -156,6 +156,7 @@ ko:
     see my likes: "좋아요 전체 보기"
     successfully deleted: "노트를 삭제했습니다."
   ref:
+    loading secondary: "이차 번역본에서 참고 구절을 로딩합니다."
     clear verses: "선택구절 취소"
     choose book and chapter: "성경과 장 선택"
     choose version: "번역본 선택"
@@ -537,7 +538,7 @@ ko:
     card exp date: "유효기간 (MMYY)"
     receipt: "영수증을 이메일로 내게 보내주세요"
     preview: "후원내용 미리보기"
-    header copy: "우리 모두 함께 역사상 성경과 가장 밀접한 세대가 될 수 있습니다. 여러분의 후원은 하나님의 말씀을 더 많은 나라에서 더 많은 사람들이 더 많은 번역본을 더 많은 기기를 통해서 접할 수 있도록 도와줍니다. 후원을 위해서 먼저 아래의 양식을 작성하시고, 다음 화면에서 지불 방법을 적어주세요."
+    header copy: "우리 모두 함께 역사상 성경과 가장 밀접한 세대가 될 수 있습니다. 여러분의 후원은 하나님의 말씀을 더 많은 나라에서 더 많은 사람들이 더 많은 번역본을 더 많은 기기를 통해서 접할 수 있도록 도와줍니다. 후원을 위해서 먼저 아래의 양식을 작성하시고, 다음 화면에서 지불 방법을 적어주세요.  비자와 마스터 카드만 사용가능합니다."
     header confirm copy: "우리 모두 함께 역사상 성경과 가장 밀접한 세대가 될 수 있습니다. 여러분의 후원은 하나님의 말씀을 더 많은 나라에서 더 많은 사람들이 더 많은 번역본을 더 많은 기기를 통해서 접할 수 있도록 도와줍니다. 후원을 원하시면 지금 후원하기를 클릭해주세요."
     donate now button: "지금 후원하기"
     email header: "LifeChurch.tv 교회 사역의 하나인 YouVersion은 여러분의 후원을 받습니다. 후원의 보답으로 눈에 보이지 않는 영적인 혜택을 제외한 다른 물건이나 서비스는 제공하지 않습니다. 질문이 있으시면 giving@lifechurch.tv 로 보내주세요."
@@ -647,12 +648,15 @@ ko:
     404 explanation: "다시 한 번  <a href='%{reader_path}'>home page</a>를 시도해주세요. 지속적으로 작동이 되지 않으면 <a href='%{support_url}'>지원팀</a>에게 알려 주십시오."
     404 message: "죄송합니다. 찾으시는 페이지가 없습니다."
     408 message: "서버 접속이 지연되고있습니다. 죄송합니다."
-    408 explanation: "이 페이지를  <a href= '%{reload_path}'>재시도</a> 해주세요.  이 오류에 대해서 통보를 받았습니다. 최대한 빨리 해결하도록 최선을 다하겠습니다."
+    408 explanation: "이 오류에 대해서 통보를 받았습니다. 최대한 빨리 해결하도록 최선을 다하겠습니다. 성경읽기로 되돌아 갈 수있는지 재시도를 해보겠습니다."
     try again: "재시도"
   versions:
+    courtesy of: "%{abbreviation} 번역본은 %{publisher} 제공입니다."
+    learn more: "더 알아보기"
     index title: "사용 가능한 번역본"
     publisher widget title: "출판자"
     visit publisher: "제공자 웹사이트"
+    about: "이 번역본에 대해서 더 알고 싶으시면 ..."
     read title: "이 번역본 읽기"
     other versions: "제공자의 다른 번역본들"
     number of versions field: "전체 번역본수:"
