--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -177,6 +177,8 @@ pl:
     select another chapter: "Wybierz inny rozdział"
     view in reader: "Zobacz %{reference} w Czytniku"
   users:
+    unverified heading: "Prawie gotowe!"
+    unverified message: "Wygląda na to, że próbujesz zalogować się do konta, które nie zostało całkowicie ustawione. Pozostał tylko jeden krok: po prostu kliknij na odnośnik weryfikacji w mailu potwierdzającym, który otrzymałeś od YouVersion. Nie możesz do znaleźć? Sprawdź w folderze spamu lub <a href='%{resend_path}'>wyślij e-mail ponownie</a>."
     reset connection: "Niestety, wystąpił błąd. Prosimy usuń i podłącz ponownie to połączenie."
     settings: "Ustawienia"
     no connection friends: "Wydaje się, że żaden z Twoich %{connection} znajomych nie zarejestrował się jeszcze w YouVersion."
@@ -195,6 +197,7 @@ pl:
     follow: "Podążaj"
     follow user: "Podążaj za użytkownikiem %{user}"
     unfollow: "Przestań podążać"
+    unfollow user: "Nie podążaj za %{user}"
     following title: "Osoby, za którymi podążam"
     user does not follow you: "%{user} nie podąża za tobą"
     recent activity: "Ostatnia aktywność"
@@ -258,6 +261,7 @@ pl:
     privacy:
       policy: "Polityka prywatności %{youversion}"
       intro: "YouVersion, Strona i Aplikacja, której właścicielem i operatorem jest LifeChurch.tv, wie, że zależy ci na odpowiednim użyciu i udostępnianiu twoich informacji. Mamy nadzieję, że poniższe oświadczenie pomoże ci zrozumieć jak YouVersion zbiera, używa i chroni informacje, które dostarczasz przez naszą stronę lub aplikację. Nie użyjemy i nie udostępnimy twoich informacji z nikim poza przypadkami opisanymi w Polityce prywatności."
+      translation disclaimer: "Polityka prywatności została przetłumaczona dla twojej wygody; Jednak LifeChurch.tv nie gwarantuje i nie odpowiada za dokładność tego tłumaczenia.  W razie jakichkoliwek rozbieżności pomiędzy wersją angielską i tłumaczeniem, wersja angielska będzie traktowana jako nadrzędna."
       what we collect: "Co gromadzimy i jak to używamy"
       your information title: "Informacje, które przekazujesz"
       your information text: "do not translate"
@@ -285,6 +289,7 @@ pl:
       questions text: "Pytania dotyczące polityki prywatności mogą być kierowane do: %{mailto_link}"
     terms:
       title: "Warunki użytkowania"
+      translation disclaimer: "Warunki użytkowania zostały przetłumaczone dla twojej wygody; Jednak LifeChurch.tv nie gwarantuje i nie odpowiada za dokładność ich tłumaczenia.  W razie jakichkoliwek rozbieżności pomiędzy wersją angielską i tłumaczeniem, wersja angielska będzie traktowana jako nadrzędna."
       acceptance title: "Akceptacja warunków"
       acceptance text: "do not translate"
       description title: "Opis usługi"
@@ -492,6 +497,7 @@ pl:
     subscribe successful: "Świetnie! Zapisałeś się do tego planu."
     which day in plan: "Dzień %{day} z %{total}"
     must start to complete: "Rozpocznij ten plan, aby zapisać przeczytane fragmenty!"
+    invalid reference: "Niestety, jedna z referencji do Pisma Świętego z tego planu nie istnieje w wybranym przekładzie. Spróbuj wybrać inny przekład. Jeśli ta wiadomość będzie wciąż wyświetlana, prosimy powiadom nasz <a href='%{support_url}'>zespół wsparcia</a> o tym problemie."
   registration:
     with facebook: "Zarejestruj się do Facebook'a"
     benefits title: "Doświadcz pełni korzyści"
@@ -640,8 +646,11 @@ pl:
   app errors:
     404 explanation: "Możesz spróbować rozpocząć ponownie od <a href='%{reader_path}'>strony głównej</a>. Nadal masz problem? Skontaktuj się z naszym <a href='%{support_url}'>zespołem wsparcia</a>."
     404 message: "Niestety, strona którą szukasz nie została znaleziona."
+    408 message: "Przykro nam, ale nasze serwery nie odpowiedziały na czas."
+    408 explanation: "Zostaliśmy zaalarmowani i usuniemy uciążliwości tak szybko jak to tylko możliwe. Sprawdźmy, czy możemy przenieść cię ponownie do czytania Biblii!"
     try again: "Spróbuj ponownie"
   versions:
+    learn more: "Dowiedz się więcej"
     index title: "Dostępne przekłady"
     publisher widget title: "Wydawca"
     visit publisher: "Odwiedź stronę wydawcy"
