--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -156,6 +156,7 @@ ru:
     see my likes: "Всё понравившееся"
     successfully deleted: "Заметка удалена"
   ref:
+    loading secondary: "Загружаю ссылки в параллельном переводе..."
     clear verses: "Очистить выделение"
     choose book and chapter: "Выберите книгу и главу"
     choose version: "Выберите перевод"
@@ -537,7 +538,7 @@ ru:
     card exp date: "Срок действия (ММГГ)"
     receipt: "Выслать на email копию чека."
     preview: "Просмотр пожертвования"
-    header copy: "Вместе мы могли бы стать самым читающим Библию поколением в истории. Ваша поддержка означает, что больше людей смогут открыть Слово Божие на большем количестве платформ, на других языках, во множестве переводов и в большем количестве стран, чем когда-либо прежде. Пожалуйста, заполните форму ниже, чтобы сделать пожертвование. На следующей странице Вам также необходимо будет ввести платёжную информацию."
+    header copy: "Вместе мы могли бы стать самым читающим Библию поколением в истории. Ваша поддержка означает, что больше людей смогут открыть Слово Божие на большем количестве платформ, на других языках, во множестве переводов и в большем количестве стран, чем когда-либо прежде. Пожалуйста, заполните форму ниже, чтобы сделать пожертвование. На следующей странице Вам также необходимо будет ввести платёжную информацию. Мы принимаем карты Visa и Mastercard."
     header confirm copy: "Вместе мы могли бы стать самым читающим Библию поколением в истории. Ваша поддержка означает, что больше людей смогут открыть Слово Божие на большем количестве платформ, на других языках, во множестве переводов и в большем количестве стран, чем когда-либо прежде. Нажмите на зелёную кнопку справа, чтобы сделать пожертвование."
     donate now button: "Отправить пожертвование"
     email header: "YouVersion, миссионерское отделение LifeChurch.tv, получило Ваше пожертвование. За пожертвование Вам не были предоставлены никакие товары и услуги, за исключением нематериальных религиозных преимуществ. Пожалуйста, свяжитесь с giving@lifechurch.tv, если у Вас есть какие-либо вопросы."
@@ -647,12 +648,15 @@ ru:
     404 explanation: "Попробуйте начать снова с <a href='%{reader_path}'>главной страницы</a>. Всё ещё появляется ошибка? Напишите в нашу <a href='%{support_url}'>службу поддержки</a>."
     404 message: "Извините, запрашиваемая страница не существует."
     408 message: "К сожалению, наши серверы не могут обработать запрос в данный момент."
-    408 explanation: "Вы можете попробовать <a href= %{reload_path}>перезагрузить</a> страницу. Мы получили уведомление об этой ошибке и попробуем её решить как можно скорее."
+    408 explanation: "Мы получили уведомление об этой ошибке и попробуем её решить как можно скорее. Попробуем вернуться к чтению Библии?"
     try again: "Попробуйте еще раз"
   versions:
+    courtesy of: "%{abbreviation} подготовлено для Вас %{publisher}"
+    learn more: "Подробнее..."
     index title: "Доступные переводы"
     publisher widget title: "Издатель"
     visit publisher: "Посетить сайт издателя"
+    about: "Узнать больше об этом переводе..."
     read title: "Читать этот перевод"
     other versions: "Другие переводы, предоставленные издателем"
     number of versions field: "Всего переводов:"
