--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -646,7 +646,7 @@ en:
         small:                                  "Small"
         medium:                                 "Medium"
         large:                                  "Large"
-        highlights:                             "Highlights:"
+        highlights:                             "Highlights"
         on:                                     "On"
         off:                                    "Off"
         extras:                                 "Extras:"
